[tool.poetry]
name = "repl-nix-aula-050-formularios"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_aula_050_formularios"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-bootstrap = "^3.3.7.1"
flask-moment = "^1.0.5"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
